PLANSOFT-700: scrollbar fix

--- a/app/styles/overwrites.less
+++ b/app/styles/overwrites.less
@@ -94,17 +94,30 @@
 
     .ant-layout .ant-tabs-content .parentDiv {
         // height: @view-height;
-        height: ~"calc(100% - 120px)";
+        height: ~"calc(100% - 18vh)";
         overflow: scroll;
     }
 
-    .wtHolder,
-    .wtSpreader,
-    table.htCore,
+    // .wtHolder {
+    //     height: @view-height;
+    //     // overflow: hidden;
+    // }
+    
+    // .wtSpreader {
+    //     height: @view-height;
+    //     // overflow: hidden;
+    // }
+
+    // table.htCore {
+    //     height: @view-height;
+    //     // overflow: hidden;
+    // }
+
     .ht_master.handsontable {
-        // height: @view-height;
+        height: @view-height;
         // overflow: hidden;
     }
+
     .budgetBody {
         padding-bottom: 0 !important;
     }
